<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvHeaderProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginLeft="10dp"
        android:text="@string/title_header"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHeaderPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:text="@string/price_header"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@id/tvHeaderProductName"
        app:layout_constraintLeft_toRightOf="@id/tvHeaderProductName"
        app:layout_constraintTop_toTopOf="@id/tvHeaderProductName" />

    <TextView
        android:id="@+id/tvHeaderDiscountPrice"
        android:layout_width="50dp"
        android:layout_height="19dp"
        android:layout_marginEnd="32dp"
        android:text="@string/total_price"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tvHeaderPrice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvHeaderPrice"
        app:layout_constraintTop_toTopOf="@+id/tvHeaderPrice" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cartProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnApply"
        app:layout_constraintTop_toBottomOf="@id/tvHeaderProductName"
        tools:layout_editor_absoluteX="10dp" />

    <Button
        android:id="@+id/btnApply"
        style="@style/bigPrimaryBackground"
        android:layout_margin="10dp"
        android:text="@string/btn_buy_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>